--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html, body {
 
 .navbar {
     background-color: #121240;
+    justify-self: flex-start;
     justify-content: space-between;
     padding: 10px;
 }
@@ -93,4 +94,63 @@ a:hover {
 img {
     height: 30px;
     width: 30px;
+}
+
+.email-box {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    justify-self: center;
+    max-width: 600px;
+    min-width: 600px;
+    max-height: 500px;
+    margin: 100px;
+    padding: 5px;
+    gap: 10px;
+
+    border-radius: 20px;
+    border: 5px solid darkslateblue;
+    background-color: aliceblue;
+}
+
+input, textarea {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+
+    border-radius: 10px;
+    border: 3px solid black;
+
+    resize: none;
+}
+
+.email-subject {
+    display: flex;
+    gap: 10px;
+}
+
+.message-box {
+    width: 92%;
+    min-height: 120px;
+    min-width: 200px;
+}
+
+.send-mail {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+
+    padding: 10px;
+
+    border-radius: 10px;
+    border: 3px solid black;
+
+    color: white;
+    background-color: #111240;
 }
